--- a/Lab01MaterialP1/css/logo.css
+++ b/Lab01MaterialP1/css/logo.css
@@ -17,9 +17,9 @@ div.cell{
     padding:10px 15px 15px 10px;
     border:solid 3px pink;
 }
-/* PH logo setting */
+/* PH logo setting */hite
 div.honver{
-           background: Black;
+           background: white;
            display: block;
            padding: 5px;
        }
